# spdnet-training

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/optuna/: run_optuna_kaggle_wheat_sgd.sh  run_optuna_kaggle_wheat_v2.sh
src/spdnet_training/: __init__.py  lightning_module.py  optimize.py  train.py
src/spdnet_training/callbacks/: __init__.py  covariance_analysis.py  csv_metrics_logger.py  optuna_pruning.py  plotting.py  results_saver.py  rich_logger.py
src/spdnet_training/configs/: __init__.py  config.yaml
src/spdnet_training/configs/launcher/: gpu_sweep.yaml
src/spdnet_training/configs/model/: spdnet.yaml
src/spdnet_training/configs/optuna/: kaggle_wheat_sgd.yaml  kaggle_wheat_v2.yaml
src/spdnet_training/configs/trainer/: adam_plateau.yaml  default.yaml  sgd_warmup_plateau.yaml
src/spdnet_training/utils/: __init__.py  metrics.py  scheduler.py
tests/: __init__.py
