[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spdnet-training"
version = "0.1.0"
description = "Training infrastructure for SPDNet research: Lightning module, callbacks, Hydra training loop"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Matthieu Gallet"},
    {name = "Ammar Mian", email = "ammar.mian@univ-smb.fr"},
]
keywords = ["deep-learning", "spdnet", "training", "pytorch-lightning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=0.11.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "rich>=10.0.0",
    "tqdm>=4.62.0",
    "optuna>=3.0.0",
    "yetanotherspdnet @ git+https://github.com/Yet-Another-Research-Organisation/yetanotherspdnet.git",
    "spdnet-datasets @ git+https://github.com/Yet-Another-Research-Organisation/spdnet-datasets.git",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=3.0.0"]
dev = ["ruff>=0.1.0", "pre-commit>=3.4.0"]

[project.scripts]
spdnet-train = "spdnet_training.train:main"
spdnet-optimize = "spdnet_training.optimize:main"

[project.urls]
Repository = "https://github.com/Yet-Another-Research-Organisation/spdnet-training"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
